--- a/SolarSystem/Base.lproj/Main.storyboard
+++ b/SolarSystem/Base.lproj/Main.storyboard
@@ -68,10 +68,10 @@
             </objects>
             <point key="canvasLocation" x="1374" y="1718"/>
         </scene>
-        <!--Table View Controller-->
+        <!--PlanetL Ist Table View Controller-->
         <scene sceneID="iij-6r-Far">
             <objects>
-                <tableViewController id="7FM-Lp-rY7" sceneMemberID="viewController">
+                <tableViewController id="7FM-Lp-rY7" customClass="PlanetLIstTableViewController" customModule="SolarSystem" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="pp1-8a-YDp">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
