--- a/SolarSystem/Base.lproj/Main.storyboard
+++ b/SolarSystem/Base.lproj/Main.storyboard
@@ -16,20 +16,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="m7Q-Tj-whv">
-                                <rect key="frame" x="0.0" y="401" width="600" height="84"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="planetImage" translatesAutoresizingMaskIntoConstraints="NO" id="tgw-u3-ndU" userLabel="planetImage">
+                                <rect key="frame" x="172" y="65" width="256" height="264"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="264" id="QqV-Ks-MP5"/>
+                                    <constraint firstAttribute="width" constant="256" id="rSC-Er-NkL"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="m7Q-Tj-whv">
+                                <rect key="frame" x="0.0" y="437" width="600" height="114"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="planetName" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a60-oG-bJZ" userLabel="planetName">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="21"/>
+                                        <rect key="frame" x="254" y="0.0" width="92" height="21"/>
                                         <accessibility key="accessibilityConfiguration">
                                             <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                         </accessibility>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="planetDiameter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jnH-LP-asA" userLabel="planetDiameter">
-                                        <rect key="frame" x="0.0" y="21" width="600" height="21"/>
+                                        <rect key="frame" x="241" y="31" width="118" height="21"/>
                                         <accessibility key="accessibilityConfiguration">
                                             <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                         </accessibility>
@@ -38,7 +45,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dayLength" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3OO-EG-RXt" userLabel="dayLength">
-                                        <rect key="frame" x="0.0" y="42" width="600" height="21"/>
+                                        <rect key="frame" x="260" y="62" width="81" height="21"/>
                                         <accessibility key="accessibilityConfiguration">
                                             <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                         </accessibility>
@@ -47,7 +54,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="distanceFromSun" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QZS-11-HvU" userLabel="distanceFromSun">
-                                        <rect key="frame" x="0.0" y="63" width="600" height="21"/>
+                                        <rect key="frame" x="233" y="93" width="134" height="21"/>
                                         <accessibility key="accessibilityConfiguration">
                                             <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                         </accessibility>
@@ -57,21 +64,14 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="planetImage" translatesAutoresizingMaskIntoConstraints="NO" id="tgw-u3-ndU" userLabel="planetImage">
-                                <rect key="frame" x="172" y="65" width="256" height="264"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="256" id="CEo-u0-gCj"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8UD-My-ipn" firstAttribute="top" secondItem="m7Q-Tj-whv" secondAttribute="bottom" constant="115" id="7VB-f1-V0a"/>
-                            <constraint firstItem="tgw-u3-ndU" firstAttribute="centerX" secondItem="m7Q-Tj-whv" secondAttribute="centerX" id="Yhz-Nz-dxZ"/>
-                            <constraint firstItem="m7Q-Tj-whv" firstAttribute="top" secondItem="tgw-u3-ndU" secondAttribute="bottom" constant="72" id="aiA-UV-HX9"/>
-                            <constraint firstItem="m7Q-Tj-whv" firstAttribute="leading" secondItem="DPd-IW-lkV" secondAttribute="leading" id="bdY-HS-Qlf"/>
-                            <constraint firstAttribute="trailing" secondItem="m7Q-Tj-whv" secondAttribute="trailing" id="muh-4G-ofg"/>
-                            <constraint firstItem="tgw-u3-ndU" firstAttribute="top" secondItem="8Jc-Yy-jNf" secondAttribute="bottom" constant="1" id="wBv-qK-Wyn"/>
+                            <constraint firstItem="8UD-My-ipn" firstAttribute="top" secondItem="m7Q-Tj-whv" secondAttribute="bottom" constant="49" id="OnV-VJ-cZV"/>
+                            <constraint firstAttribute="trailing" secondItem="m7Q-Tj-whv" secondAttribute="trailing" id="a0D-af-5ZD"/>
+                            <constraint firstItem="tgw-u3-ndU" firstAttribute="top" secondItem="8Jc-Yy-jNf" secondAttribute="bottom" constant="1" id="iXp-5U-JMF"/>
+                            <constraint firstItem="m7Q-Tj-whv" firstAttribute="leading" secondItem="DPd-IW-lkV" secondAttribute="leading" id="tmM-zW-tDN"/>
+                            <constraint firstItem="tgw-u3-ndU" firstAttribute="centerX" secondItem="m7Q-Tj-whv" secondAttribute="centerX" id="z9S-qJ-xCf"/>
                         </constraints>
                     </view>
                     <connections>
